firmware apis made and migration for d_author created
