# src/models/req/ReqFirmware.ts
@@ -1,0 +1,6 @@
+export interface ReqFirmware {
+  firmwareVersion?: string;
+  file?: string;
+  uploadedBy?: string;
+  isActive?: boolean;
+}
