# src/models/res/ResFirmware.ts
@@ -1,0 +1,10 @@
+export interface ResFirmware {
+  id?: number;
+  firmwareVersion?: string;
+  file?: string;
+  createdAt?: Date;
+  updatedAt?: Date;
+  uploadedBy?: string;
+  isActive?: boolean;
+  vehicleId?: number | null;
+}
